# slam_data_preperation

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/: txt2bag.hpp
launch/: txt2bag_launch.py
src/: txt2bag.cpp
